--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -2,14 +2,13 @@
     box-sizing: border-box;
 }
 body {
-    box-sizing: border-box;
     font-family: 'Roboto', sans-serif;
     font-size: 12px;
-    margin: 0;
-    background-color: #ebebeb ;
+    background-color: #ebebeb;
 }
 
 header {
+    width: 100%;
     background-color: #EAC926;
 }
 
@@ -19,7 +18,7 @@ header img {
     margin-left: 15px;
 }
 
-header input {
+header div input {
     border-radius: 5px;
     margin: 0 0 0 15px;
     width: 180px;
@@ -30,7 +29,7 @@ header .wrapper {
     margin-left: 15px;
 }
 
-#searchButton {
+header div button {
     padding: 0 0 0 0;
 }
 
@@ -65,6 +64,10 @@ header nav div button {
 header nav div button i {
     color: #fff;
     font-size: 16px;
+}
+
+body section img {
+    width: 100%;
 }
 
 main section h3 {
