--- a/views/home.html
+++ b/views/home.html
@@ -54,7 +54,7 @@
         </nav>
     </header>
     <section>
-        <img src="/images/img-home-banner.jpg" alt="Banner de ofertas">
+        <img id="banner" src="/images/img-home-banner.jpg" alt="Banner de ofertas">
     </section>
     <main>
         <section>
