--- a/views/home.html
+++ b/views/home.html
@@ -17,17 +17,18 @@
 
 <body>
     <header>
-        <img src="/images/logo-mercado-liebre.svg" width="360" alt="Logo de MercadoLiebre">
+        <div class="logo-search">
+            <img src="/images/logo-mercado-liebre.svg" width="360" alt="Logo de MercadoLiebre">
 
-        <div class="buscador">
-            <input type="text" placeholder="Buscar productos, marcas">
-            <button type="submit"><i class="fas fa-search"></i></button>
+            <div class="buscador">
+                <input type="text" placeholder="Buscar productos, marcas">
+                <button type="submit"><i class="fas fa-search"></i></button>
+            </div>
         </div>
-
         <p>
             <i class="fas fa-hand-holding-usd"></i>Comprá en cuotas y sin tarjeta de crédito
         </p>
-        <nav>
+        <nav class="main-navbar">
             <div class="site-navbar">
                 <ul>
                     <li><a href="#">Ofertas</a></li>
@@ -51,12 +52,12 @@
                 </ul>
             </div>
             <div class= "hamburguer">
-                <button type="submit"><i class="fas fa-bars"></i></button>
+                <button type="button"><i class="fas fa-bars"></i></button>
             </div>
         </nav>
     </header>
     <section>
-        <img id="banner" src="/images/img-home-banner.jpg" alt="Banner de ofertas">
+        <img class="banner" src="/images/img-home-banner.jpg" alt="Banner de ofertas">
     </section>
     <main>
         <section>
@@ -65,7 +66,7 @@
             <article>
                 <img src="/images/img-cafetera-moulinex.jpg" width="360" alt="Cafetera" class="product_img">
                 <div class="caracteristicasArticulo">
-                    <div class="circulo"><i class="fas fa-truck"></i></div>
+                    <i class="fas fa-truck"></i>
                     <p class= "precio">$6.770</p>
                     <p class="descuento">40% off</p>
                     <h4>Cafetera Moulinex</h4>
@@ -75,7 +76,7 @@
             <article>
                 <img src="/images/img-macbook-pro-2019.jpg" width="360" alt="MacBook" class="product_img">
                 <div class="caracteristicasArticulo">
-                    <div class="circulo"><i class="fas fa-truck"></i></div>
+                    <i class="fas fa-truck"></i>
                     <p class= "precio">$230.000</p>
                     <p class="descuento">20% off</p>
                     <h4>MacBook Pro 2019</h4>
@@ -86,7 +87,7 @@
                 <img src="/images/img-samsung-galaxy-s10.jpg" width="360" alt="Teléfono Móvil Samsung Galaxy"
                     class="product_img">
                 <div class="caracteristicasArticulo">
-                    <div class="circulo"><i class="fas fa-truck"></i></div>
+                    <i class="fas fa-truck"></i>
                     <p class= "precio">$70.500</p>
                     <p class="descuento">10% off</p>
                     <h4>Teléfono móvil Samsung Galaxy S10</h4>
@@ -95,7 +96,7 @@
             <article>
                 <img src="/images/img-tv-samsung-smart.jpg" width="360" alt="SmartTv Samsung" class="product_img">
                 <div class="caracteristicasArticulo">
-                    <div class="circulo"><i class="fas fa-truck"></i></div>
+                    <i class="fas fa-truck"></i>
                     <p class= "precio">$23.200</p>
                     <p class="descuento">5% off</p>
                     <h4>SmartTv Samsung 43"</h4>
@@ -108,7 +109,7 @@
             <article>
                 <img src="/images/img-cafetera-moulinex.jpg" width="360" alt="Cafetera" class="product_img">
                 <div class="caracteristicasArticulo">
-                    <div class="circulo"><i class="fas fa-truck"></i></div>
+                    <i class="fas fa-truck"></i>
                     <p class= "precio">$6.770</p>
                     <p class="descuento">40% off</p>
                     <h4>Cafetera Moulinex</h4>
@@ -117,7 +118,7 @@
             <article>
                 <img src="/images/img-macbook-pro-2019.jpg" width="360" alt="MacBook" class="product_img">
                 <div class="caracteristicasArticulo">
-                    <div class="circulo"><i class="fas fa-truck"></i></div>
+                    <i class="fas fa-truck"></i>
                     <p class= "precio">$230.000</p>
                     <p class="descuento">20% off</p>
                     <h4>MacBook Pro 2019</h4>
@@ -127,7 +128,7 @@
                 <img src="/images/img-samsung-galaxy-s10.jpg" width="360" alt="Teléfono Móvil Samsung Galaxy"
                     class="product_img">
                 <div class="caracteristicasArticulo">
-                    <div class="circulo"><i class="fas fa-truck"></i></div>
+                    <i class="fas fa-truck"></i>
                     <p class= "precio">$70.500</p>
                     <p class="descuento">10% off</p>
                     <h4>Teléfono móvil Samsung Galaxy S10</h4>
@@ -136,7 +137,7 @@
             <article>
                 <img src="/images/img-tv-samsung-smart.jpg" width="360" alt="SmartTv Samsung" class="product_img">
                 <div class="caracteristicasArticulo">
-                    <div class="circulo"><i class="fas fa-truck"></i></div>
+                    <i class="fas fa-truck"></i>
                     <p class= "precio">$23.200</p>
                     <p class="descuento">5% off</p>
                     <h4>SmartTv Samsung 43"</h4>
