--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -165,6 +165,114 @@ main h4 {
     flex: 1 1 100%;
 }
 
+/* ================= /register ======================= */
+
+main form{
+    display: flex;
+    flex-flow: column wrap;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+main form input {
+    border: none;
+    height: 40px;
+    margin: 10px 0 10px 0;
+    border-radius: 5px;
+    padding-left: 10px;
+}
+main .subtitle {
+    font-weight: bold;
+    font-size: 16px;
+    margin: 5px 0 5px 0;
+}
+
+main form div {
+    display: flex;
+    flex-flow: column wrap;
+}
+
+main .perfilUsuario {
+    flex-flow: row wrap;
+}
+
+main .subtitle {
+    flex: 1 1 100%;
+}
+
+main .comprador,
+main .vendedor{
+    flex-flow: row;
+    align-items: center;
+    flex: 1 1 30%;
+    margin-left: 15px;
+}
+
+main .electro,
+main .moda,
+main .hogar,
+main .jugueteria,
+main .vida {
+    flex-flow: row;
+    align-items: center;
+    margin-left: 20px;
+}
+
+main .perfilUsuario input,
+main .intereses input {
+    margin-right: 15px;
+}
+
+main .imagenPerfil label {
+    font-weight: bold;
+    font-size: 16px;
+    margin: 5px 0 5px 0;
+}
+
+main .imagenPerfil input {
+    height: 20px;
+}
+
+main .buttons {
+    flex-flow: row;
+}
+
+main .buttons button a{
+    text-decoration: none;
+    color: #000;
+}
+
+.register input:invalid {
+    border: 1px solid red;
+}
+
+.register input:valid {
+    border: 1px solid green;
+}
+
+/* ================= /login =======================*/
+
+
+.login input {
+    margin: 20px 0 20px 0;
+    width: 100%;
+}
+
+.login button {
+    border: none;
+    background-color: #1259c3;
+    border-radius: 5px;
+    height: 40px;
+    margin: 20px 0 20px 0;
+    width: 100%;
+}
+
+.login button a{
+    text-decoration: none;
+    color: #fff;
+}
+
+
 /* ================= FOOTER ======================= */
 
 footer {
@@ -280,6 +388,17 @@ footer section article h5{
 
     main section article {
         flex: 1 1 40%;
+    }
+    /* ====/register==== */
+    main .comprador,
+    main .vendedor {
+        flex: none;
+    }
+
+    /* ====/login==== */
+    .login {
+        width: 70vw;
+        margin: auto;
     }
 }
 
