--- a/views/home.html
+++ b/views/home.html
@@ -20,10 +20,10 @@
         <div class="logo-search">
             <img src="/images/logo-mercado-liebre.svg" width="360" alt="Logo de MercadoLiebre">
 
-            <div class="buscador">
+            <form class="buscador">
                 <input type="text" placeholder="Buscar productos, marcas">
                 <button type="submit"><i class="fas fa-search"></i></button>
-            </div>
+            </form>
         </div>
         <p>
             <i class="fas fa-hand-holding-usd"></i>Comprá en cuotas y sin tarjeta de crédito
