--- a/views/login.html
+++ b/views/login.html
@@ -15,7 +15,7 @@
         <title>Mercado Liebre</title>
     </head>
     <body>
-        <header>
+        <header class ="header">
             <div class="logo-search">
                 <img src="/images/logo-mercado-liebre.svg" width="360" alt="Logo de MercadoLiebre">
     
@@ -55,7 +55,7 @@
                 </div>
             </nav>
         </header>
-        <main>
+        <main class="formMain">
             <form class="login" action="/login" method="POST">
                 <input type="text" name="usuario" placeholder="Nombre de usuario">
                 <input type="password" name="password" placeholder="Contraseña">
