--- a/views/home.html
+++ b/views/home.html
@@ -16,7 +16,7 @@
     </head>
 
 <body>
-    <header>
+    <header class="header">
         <div class="logo-search">
             <img src="/images/logo-mercado-liebre.svg" width="360" alt="Logo de MercadoLiebre">
 
@@ -56,7 +56,7 @@
             </div>
         </nav>
     </header>
-    <section>
+    <section class="section-banner">
         <img class="banner" src="/images/img-home-banner.jpg" alt="Banner de ofertas">
     </section>
     <main>
@@ -146,7 +146,7 @@
         </section>
     </main>
     <footer>
-        <section >
+        <section class="comentarioFooter">
             <article>
                 <div>
 
@@ -159,7 +159,7 @@
                     seguro!</p>
             </article>
         </section>
-        <section >
+        <section class="comentarioFooter">
             <article>
                 <div>
 
@@ -171,7 +171,7 @@
                     productos. Es un beneficio de Mercado Puntos.</p>
             </article>
         </section>
-        <section >
+        <section class="comentarioFooter">
             <article>
                 <div>
 
@@ -183,7 +183,7 @@
                     porque estás siempre protegid@.</p>
             </article>
         </section>
-        <section>
+        <section class="sectionCopyright">
             <article class ="copyright">
                 <h5>Copyright © 1999-2021 MercadoLiebre S.R.L.</h5>
             </article>
