--- a/views/register.html
+++ b/views/register.html
@@ -15,7 +15,7 @@
         <title>Mercado Liebre</title>
     </head>
     <body>
-        <header>
+        <header class="header">
             <div class="logo-search">
                 <img src="/images/logo-mercado-liebre.svg" width="360" alt="Logo de MercadoLiebre">
     
@@ -55,7 +55,7 @@
                 </div>
             </nav>
         </header>
-        <main>
+        <main class="formMain">
             <form class="register" action="/register" method="POST">
                 <input type="text" name="nombre" placeholder="Nombre y apellido" required minlength="2">
                 <input type="text" name="usuario" placeholder="Nombre de usuario" required minlength="4">
